# django-project-boilerplate

./: .env.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose-deploy.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: settings.py  urls.py
app/app/: asgi.py  settings.py  urls.py  wsgi.py
app/core/: admin.py  models.py  views.py
app/core/management/commands/: wait_for_db.py
app/core/migrations/: 0001_initial.py
app/core/tests/: test_admin.py  test_commands.py  test_health_check.py  test_models.py
proxy/: Dockerfile  default.conf.tpl  run.sh
templates/: main.html
